created: sprive svg and block with posts

--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,14 @@
 }
 body {
   font-family: sans-serif;
+  background-color: #e5e5e5;
 }
 .header {
   background: #fa8c16;
   padding-top: 16px;
   padding-bottom: 16px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  margin-bottom: 30px;
 }
 .header-wrapper {
   max-width: 1200px;
@@ -66,4 +69,98 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.content {
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
+}
+.posts {
+  max-width: 800px;
+}
+.post {
+  background-color: #fff;
+  border: 1px solid #e8e8e8;
+  margin-bottom: 30px;
+}
+.post-body {
+  padding: 35px 35px 0 35px;
+}
+.post-title {
+  margin-bottom: 19px;
+  margin-top: 0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+.post-text {
+  color: #262626;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 22px;
+}
+.tags {
+  margin-bottom: 22px;
+}
+.tag {
+  color: #bfbfbf;
+  font-size: 14px;
+  line-height: 22px;
+  margin-right: 10px;
+  text-decoration: none;
+}
+.post-footer {
+  border-top: 1px solid #e8e8e8;
+  background: #fafafa;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-left: 35px;
+  padding-right: 35px;
+}
+.post-buttons {
+  display: flex;
+  align-items: center;
+}
+.post-button .icon {
+  fill: #8c8c8c;
+}
+.post-button {
+  background-color: transparent;
+  border: none;
+  color: #8c8c8c;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 22px;
+  margin-right: 19px;
+  cursor: pointer;
+}
+.icon-like,
+.icon-comments {
+  margin-right: 7px;
+}
+.post-author {
+  display: flex;
+  align-items: center;
+  text-align: right;
+}
+.author-avatar {
+  width: 34px;
+  height: 34px;
+  margin-left: 9px;
+  border-radius: 4px;
+}
+.author-username {
+  display: block;
+  text-decoration: none;
+  color: #bcbcbc;
+  font-size: 12px;
+  line-height: 20px;
+}
+.post-time {
+  color: #bfbfbf;
+  font-size: 12px;
+  line-height: 20px;
 }
